@@ -1,3 +1,8 @@
+2017-08-11  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	PR fortran/60355
+	* gfortran.dg (bind_c_usage_30): New test.
+
 2017-08-11  Martin Liska  <mliska@suse.cz>
 
 	PR tree-opt/79987
